Flipped direction of vertical carousel to avoid text overlapping on 'based in belfast'

--- a/src/index.css
+++ b/src/index.css
@@ -72,67 +72,20 @@ button {
     cursor: pointer;
 }
 
-.outer-container {
-    max-width: 200px;
-    max-height: 200px;
-    margin: auto;
-    overflow: hidden;
-    background-color: rgba(255, 255, 255, 0);
-}
 
-.outer-container > div {
-    flex: 1;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0);
-
-}
-
-.outer-container .carousel-wrapper {
-    background: rgba(255, 255, 255, 0);
-    display: flex;
-    flex-direction: column;
-
-}
-
-.outer-container .carousel-wrapper p,
-.carousel-item {
-    font-weight: 700;
-    font-size: 20px;
-    color: var(--white);
-    line-height: 1.3;
-}
-
-.outer-container .content {
-    background: var(--white);
-}
-
-
-.carousel {
-    height: 100%;
-    display: flex;
-    flex: 5;
-    align-items: center;
-    color: var(--white);
-}
-
-.slides {
-    align-self: flex-start;
-    flex: 1;
-    width: 100%;
-    overflow: hidden;
-}
 
 .carousel-inner {
-    position: relative;
-    max-height: 250px;
-    height: 250px;
+    position: absolute;
+    max-height: 100px;
+    height: 100px;
+    width: 300px;
 }
 
 .carousel-inner::before,
 .carousel-inner::after {
     content: "";
     z-index: 1;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 110px;
     pointer-events: none;
@@ -163,7 +116,7 @@ button {
     padding: 0;
     margin: 0;
     opacity: 0;
-    top: 112px;
+    /*top: 112px;*/
     transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
